--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -121,29 +121,6 @@
     cursor: pointer;
     border: 1px solid #57fff5;
 }
-// 沒有hover時 不顯示文字
-.about_hoverText {
-    display: none;
-}
-.about_speaker:hover .about_hoverText {
-    display: block;
-    text-align: left;
-    margin-top: 120px;
-}
-.about_speaker:hover .about_speaker_intro{
-    display: none;
-}
-
-
-.about_speaker:hover .about_hoverText li {
-    text-align: left;
-    font-size: 14px;
-}
-
-.about_speaker:hover .about_hoverText h4 {
-    text-align: left;
-    padding: 20px;
-}
 
 // 分三塊
 // .about_speakers{
@@ -152,11 +129,27 @@
 //     grid-template-columns: 1fr 1fr 1fr;
 //     gap:80px 40px;
 // }
-
+.about_speaker_intro{
+    height: 480px;
+}
+.about_hoverText{
+    height: 480px;
+    text-align: left;
+    margin-top: 120px;
+}
+.about_hoverText li {
+    text-align: left;
+    font-size: 14px;
+}
+.about_hoverText h4 {
+    text-align: left;
+    padding: 20px;
+}
 .about_speakers {
     display: flex;
     align-content: space-between;
     justify-content: space-around;
+    height: 480px;
 }
 
 @media (max-width: 1100px) {
