--- a/src/sass/page/_index.scss
+++ b/src/sass/page/_index.scss
@@ -142,7 +142,7 @@
             // margin-top: 120px;
         }
     }
-
+}
 //     .index_swiper_wrapper{
 //         width: 60vw;
 //         .index_swiper_container{
