--- a/src/sass/page/_c_back.scss
+++ b/src/sass/page/_c_back.scss
@@ -150,11 +150,11 @@
     text-align: center;
     padding: 10px;
     font-size: 20px;
-    &::before{
-        // content:"abc";
-        // font-size: 20px;
-        // color: white;
-                 }
+    // &::before{
+    //     content:"abc";
+    //     font-size: 20px;
+    //     color: white;
+    //              }
 
         }
 }
@@ -277,8 +277,14 @@ li.variouscompany{
             }
         }
         .btn-short{
-           padding: 0;
-           font-size: 30px;
+            color: $accent-color;
+            border: 1px solid $accent-color;
+            -webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px $accent-color;
+            box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px $accent-color;
+            &:hover{
+                background-color: $accent-color;
+                color: $black-color;
+            }
         }
         .chat_input_button{
             background-color: $accent-color;
@@ -301,18 +307,18 @@ li.variouscompany{
         // height:3px;
         width: 8px;
     }
-    &::-webkit-scrollbar-track{
-        // background-color: #F6FAFB;
-    }
+    // &::-webkit-scrollbar-track{
+    //     background-color: #F6FAFB;
+    // }
     &::-webkit-scrollbar-thumb{
         // background-color: #F37F15;
         box-shadow: inset 0 0 4px $accent-color;
         border-radius: 5px; 
         
     }
-    &::-webkit-scrollbar-track-piece{
+    // &::-webkit-scrollbar-track-piece{
 
-    }
+    // }
     p.chat_content {
         font-size: 16px;
         max-width: 60%;
