--- a/src/sass/page/_index.scss
+++ b/src/sass/page/_index.scss
@@ -102,10 +102,8 @@
 
                     h2,
                     h3 {
-                        text-align: center;
                         letter-spacing: 2px;
                         text-shadow: 1px 1px 1px rgba($second-color, 0.7);
-                        margin-bottom: auto;
                     }
                 }
             }
@@ -118,19 +116,18 @@
 @media (min-width: 1400px) and (max-width: 1599.98px){
     .index_title {
         h1 {
-            font-size: 44px;
+            font-size: 42px;
         }
     }
 
-    
-    .index_swiper_wrapper{
-        .index_swiper_container{
-            .index_slide {
-            width: 25vw;
-            height: 25vw;
-            }
-        }
-    }
+    // .index_swiper_wrapper{
+    //     .index_swiper_container{
+    //         .index_slide {
+    //         width: 22vw;
+    //         height: 22vw;
+    //         }
+    //     }
+    // }
 }
 
 // rwd 1600-2000px
@@ -138,18 +135,84 @@
     .index_title{
         margin-top: 120px;
         h1 {
-            font-size: 50px;
-            // margin-top: 120px;
+            font-size: 48px;
+        }
+    }
+
+    .index_swiper_wrapper{
+        width: 54vw;
+        .index_swiper_container{
+            .index_slide {
+                width: 20vw;
+                height: 20vw;
+            }
         }
     }
 }
-//     .index_swiper_wrapper{
-//         width: 60vw;
-//         .index_swiper_container{
-//             .index_slide {
-//             width: 25vw;
-//             height: 25vw;
-//             }
-//         }
-//     }
-// }
+
+// rwd 1200-1400px
+@media (min-width: 1200px) and (max-width: 1399.98px){
+    .index_title {
+        h1 {
+            font-size: 34px;
+        }
+    }
+    .index_swiper_wrapper{
+        width: 60vw;
+        .index_swiper_container{
+
+            .index_slide {
+                width: 23vw;
+                height: 23vw;
+
+                a{
+                    img{
+                        width: 90%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+// rwd 992-1200px
+@media (min-width: 992px) and (max-width: 1199.98px){
+    .index_title {
+        h1 {
+            font-size: 28px;
+        }
+    }
+    .index_swiper_wrapper{
+        width: 60vw;
+        .index_swiper_container{
+
+            .index_slide {
+                width: 23vw;
+                height: 23vw;
+
+                a{
+                    img {
+                        width: 90%;
+                    }
+                    div {
+                        h2,
+                        h3 {
+                            font-size: 130%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+// rwd 768-992px
+@media (min-width: 768px) and (max-width: 991.98px){
+    .index_title {
+        h1 {
+            font-size: 80%;
+        }
+    }
+
+
+}
