feat: 新增廠商後台頁面的menu顯示，新增nav右上角廠商名稱顯示

--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -1,31 +1,38 @@
 <nav>
-  <div class="nav">
-    <a href="./index.html" class="logo"><img src="img/tianlam-logo-blue.svg" alt="logo" class="img"></img></a>
-    <a href="./index.html" class="logo logo-orange nav-company"><img src="img/tianlam-logo-orange.svg" alt="logo"
-        class="img"></img></a>
-    <ul class="flex-box-end">
-      <li class="nav-name nav-login"><a href="./index.html" class="logo_icon"><i class="fa-solid fa-user-check"></i></a>
-        <p>廠商名稱</p>
-      </li>
-      <li><a href="#" id="login_page_icon" class="logo_icon"><i class="fa-solid fa-user"></i></a></li>
-      <li>
-        <label for="checkbox" id="ham-icon" class="btn_switch">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </label>
-      </li>
+  <div class="pt-60">
+    <div class="nav" id="nav">
+      <a href="./index.html" class="logo"><img src="img/tianlam-logo-blue.svg" alt="logo" class="img"></img></a>
+      <a href="./index.html" class="logo logo-orange nav-company"><img src="img/tianlam-logo-orange.svg" alt="logo"
+          class="img"></img></a>
+      <ul class="flex-box-end">
+        <li class="nav-name nav-login" id="nav_login"><a href="./index.html" class="logo_icon"><i class="fa-solid fa-user-check"></i></a>
+          <p>廠商名稱測試非常非常非常的長</p>
+        </li>
+        <li><a href="#" id="login_page_icon" class="logo_icon"><i class="fa-solid fa-user"></i></a></li>
+        <li>
+          <label for="checkbox" id="ham-icon" class="btn_switch">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+        </li>
+      </ul>
+    </div>
+    <ul class="menu">
+      <li class="nav-company"><a href="companyback.html" class="accent-color">管理後台</a></li>
+      <li><a href="extend.html">虛擬商展</a></li>
+      <li><a href="live.html">現正直播</a></li>
+      <li><a href="about.html">展會介紹</a></li>
+      <li><a href="news.html">新聞資訊</a></li>
+      <li><a href="contect.html">聯絡我們</a></li>
+      <li class="nav-company"><a href="./index.html" class="accent-color">登出<img src="img/logout.svg" alt="logout" class="ml-6"></img></a></li>
     </ul>
+    <ul class="company-menu" id="company_menu">
+      <li><a href="companyback_info.html"><img src="img/c_back/company_menu_1.svg" alt="廠商資料設定區"></a></li>
+      <li><a href="companyback_live.html"><img src="img/c_back/company_menu_2.svg" alt="技術展示區"></a></li>
+      <li><a href="companyback.html"><img src="img/c_back/company_menu_3.svg" alt="直播申請區"></a></li>
+    </ul>
+    <div id="menu-backdrop"></div>
   </div>
-  <ul class="menu">
-    <li class="nav-company"><a href="companyback.html" class="accent-color">管理後台</a></li>
-    <li><a href="extend.html">虛擬商展</a></li>
-    <li><a href="live.html">現正直播</a></li>
-    <li><a href="about.html">展會介紹</a></li>
-    <li><a href="news.html">新聞資訊</a></li>
-    <li><a href="contect.html">聯絡我們</a></li>
-    <li class="nav-company"><a href="login.html" class="accent-color">登出<img src="img/logout.svg" alt="logout" class="ml-6"></img></a></li>
-  </ul>
-  <div id="menu-backdrop"></div>
 </nav>
