feat 調整contect 頁面 textarea 增加resize:none,增加驗證跳出視窗

--- a/src/sass/page/_contect.scss
+++ b/src/sass/page/_contect.scss
@@ -13,6 +13,7 @@
     // width: 530px;
     background-color: #333333;
     padding: 20px;
+    
 }
 
 // p:before {
@@ -51,11 +52,13 @@
     background: none;
     font-size: 16px;
     outline: 0;
+    color: #f6fafb;
 }
 
 //訊息欄位
 .contect_message{
     height: 255px;
+    resize: none;
 }
 .contect_box:focus {
     border: 2px solid #57fff5;
